1) Movidos archivos del ejercicio a la carpeta 'resources' 2) Reajustadas rutas de generación y acceso en Main y Managers

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,6 @@ bin/
 /src/copyOfBosses.dat
 /lessBosses.dat
 /updatedBosses.dat
-/bosses_by_bossId.xml
+/resources/bosses_by_bossId.xml
 /bossesTransformed.html
 /newTestBosses.xml
